# capstone

./: .gitignore  CMakeLists.txt  README.md  config.json  requirements.txt
cpp/: NN.cpp  NN.h  custom_NN.cpp  custom_position.cpp  exten.cpp  game.cpp  game.h  position.cpp  position.h  search.cpp  search.h  treestate.cpp  treestate.h
models/current/: model.h5  model.pb
models/initial/: model.h5  model.pb
python/: .datacollect.py.swp  cpp_wrapper.py  create_model.py  custom_datacollect.py  datacollect.py  loop.py  run.py  train.py  update_model.py
python/data/: x.npy
